# internal/controllers/routes.go
@@ -14,6 +14,7 @@ type Router struct {
 	OrderSorterHandler     gin.HandlerFunc
 	PaymentCreatorHandler  gin.HandlerFunc
 	PaymentWebhookHandler  gin.HandlerFunc
+	OrderUpdaterHandler    gin.HandlerFunc
 }
 
 func (r *Router) Register(app *gin.Engine) {
@@ -33,6 +34,7 @@ func (r *Router) Register(app *gin.Engine) {
 		delivery.POST("/orders", r.OrderCreatorHandler)
 		delivery.GET("/orders", r.OrderGetterHandler)
 		delivery.GET("/orders/sorted", r.OrderSorterHandler)
+		delivery.PATCH("/orders/:order_id", r.OrderUpdaterHandler)
 
 		delivery.POST("/orders/:order_id/payment", r.PaymentCreatorHandler)
 		delivery.POST("/orders/:order_id/payment/webhook", r.PaymentWebhookHandler)
